--- a/plugins/network-monitor/src/main/java/assets/less/networkmonitor.less
+++ b/plugins/network-monitor/src/main/java/assets/less/networkmonitor.less
@@ -63,3 +63,24 @@
     margin-right: 10px;
   }
 }
+
+.networkmonitor.size-kiosk {
+  h3 {
+    font-size: 10vh;
+  }
+
+  h4 {
+    font-size: 6vh;
+  }
+
+  p {
+    font-size: 6vh !important;
+  }
+
+  .title {
+    font-size: 5vh !important;
+  }
+  .row{
+    margin-top:25vh;
+  }
+}
