--- a/web/src/main/resources/templates/index.jade
+++ b/web/src/main/resources/templates/index.jade
@@ -23,6 +23,10 @@ block content
                         i.fa.fa-plus
                         |  Add module
                 li
+                    a(href="/kiosk")
+                        i.fa.fa-television
+                        |  Kiosk
+                li
                     a(href="/settings")
                         i.fa.fa-wrench
                         |  Settings
