--- a/plugins/transmission/src/main/java/assets/less/transmission.less
+++ b/plugins/transmission/src/main/java/assets/less/transmission.less
@@ -288,3 +288,30 @@
     bottom: 0;
   }
 }
+
+.transmission.size-kiosk {
+  .actions {
+    display: none;
+  }
+
+  h4 {
+    font-size: 5vh !important;
+  }
+
+  .transmission-content {
+
+    margin-top: 28vh;
+    padding: 2vh;
+
+    .info {
+      p {
+        font-size: 5vh !important;
+      }
+
+      p.count {
+        font-size: 7vh !important;
+      }
+
+    }
+  }
+}
