pihole kiosk mode

--- a/plugins/pihole/src/main/java/assets/less/pihole.less
+++ b/plugins/pihole/src/main/java/assets/less/pihole.less
@@ -44,3 +44,18 @@
 
   }
 }
+
+.pihole.size-kiosk{
+  h1{
+    font-size: 5vh !important;
+    margin-bottom: 25vh !important;
+  }
+
+  p{
+    font-size:10vh !important;
+  }
+
+  h3{
+    font-size: 3vh;
+  }
+}
