pihole kiosk mode

--- a/plugins/pihole/src/main/java/assets/less/pihole.less
+++ b/plugins/pihole/src/main/java/assets/less/pihole.less
@@ -7,7 +7,6 @@
   background-repeat: no-repeat;
   background-position: left center;
   background-size: auto 150%;
-  margin-bottom: 20px;
 
   h1 {
     font-size: 20px;
@@ -56,6 +55,6 @@
   }
 
   h3{
-    font-size: 3vh;
+    font-size: 3vh !important;
   }
 }
