--- a/web/src/main/resources/templates/layout.jade
+++ b/web/src/main/resources/templates/layout.jade
@@ -23,6 +23,15 @@ html(lang="en")
             p
                 button.reload-page.btn.btn-primary Reload
 
+        #pages
+            div.icons
+                a.close-panel
+                    h1   Boards
+                a.add
+                    i.fa.fa-plus
+                a.edit
+                    i.fa.fa-pencil
+            ul
         .container
             block content
         .modal-dump
