--- a/web/src/main/java/assets/less/index.less
+++ b/web/src/main/java/assets/less/index.less
@@ -4,9 +4,44 @@
 @import 'pages.less';
 @import 'module-modal.less';
 
+body {
+  background-color: #333;
+}
+
+body.pages {
+  .container {
+    transform: scale(0.3);
+    border-radius: 10px;
+    box-shadow: #050A06 0 0 50px;
+  }
+
+  #settings, #layout-edit-mode {
+    display: none;
+    pointer-events: none;
+  }
+
+  #pages {
+    transform: translate(0, 0);
+  }
+
+}
+
 .container {
   margin: 0;
   padding: 0;
+  width: 100%;
+  min-height: 100vh;
+  background-color: white;
+
+  @transitionSpeed: 0.25s;
+  -webkit-transition: all @transitionSpeed;
+  -moz-transition: all @transitionSpeed;
+  -ms-transition: all @transitionSpeed;
+  -o-transition: all @transitionSpeed;
+  transition: all @transitionSpeed;
+
+  transform-origin: 95% 5%;
+  padding-bottom: 100px;
 }
 
 #page-title {
@@ -281,7 +316,6 @@
 
   @menu-border-color: #eee;
 
-
   ul {
     list-style: none;
     padding: 0;
@@ -350,13 +384,13 @@
 }
 
 @keyframes showSettings {
-  0%{
-    bottom:-185px;
+  0% {
+    bottom: -185px;
   }
-  70%{
+  70% {
     bottom: 20px;
   }
-  100%{
+  100% {
     bottom: 0;
   }
 }
