--- a/web/src/main/java/assets/less/main.less
+++ b/web/src/main/java/assets/less/main.less
@@ -6,7 +6,6 @@
 body {
   background-color: @background;
   color: #222;
-  padding-bottom: 100px;
 
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
@@ -26,6 +25,19 @@ body {
 
 .progress {
   border-radius: 0;
+}
+
+#pages {
+
+  -webkit-transition: all @transition-speed !important;
+  transition: all @transition-speed !important;
+
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  transform: translate(-500px, 0);
+
 }
 
 #notification {
