--- a/plugins/harddisk/src/main/java/assets/less/harddisk.less
+++ b/plugins/harddisk/src/main/java/assets/less/harddisk.less
@@ -91,20 +91,20 @@
 
 }
 
-.harddisk.size-kiosk{
-  .hdd-svg{
-    height: 50vh!important;
-    width:auto !important;
-    margin-top:25vh;
+.harddisk.size-kiosk {
+  .hdd-svg {
+    height: 50vh !important;
+    width: auto !important;
+    margin-top: 25vh;
   }
 
-  p{
+  p {
     margin-top: 47vh;
-    font-size:10vh;
+    font-size: 10vh;
   }
 
-  h4{
-    font-size:10vh;
+  h4 {
+    font-size: 10vh;
   }
 
 }
@@ -127,6 +127,11 @@
     a {
       cursor: pointer;
     }
+  }
+
+  .files .calculate-size {
+    font-size: 20px;
+    margin-top: 8px;
   }
 
   @backgroundColor: #e67e22;
