--- a/web/src/main/java/assets/less/layout-settings.less
+++ b/web/src/main/java/assets/less/layout-settings.less
@@ -1,27 +1,40 @@
 @import 'variables.less';
 
-.container{
+.container {
   padding: 0 15px;
 }
 
-h1 a{
+h1 a {
   font-size: 20px;
   margin: 0 20px;
 }
 
 .layout {
-  .grid {
-    background-color: @accentColor;
-    max-width: 100px;
-    max-height: 100px;
-    display: inline-block;
-    margin: 0 3px;
 
+  svg {
+    max-height: 120px;
+  }
+
+  .surfaces {
+    fill: @accentColor;
     -webkit-transition: all @transition-speed !important;
     transition: all @transition-speed !important;
 
-    animation-name: popin;
-    animation-duration: @transition-speed;
+    .pop-up {
+      transform-origin: center center;
+      animation-name: popin;
+      animation-duration: @transition-speed;
+    }
+    .pop-down {
+      transform-origin: center center;
+      animation-direction: alternate;
+      animation-name: popin;
+      animation-duration: @transition-speed;
+    }
+
+    .bottom {
+      fill: url('#gradient');
+    }
   }
 
   .grid.add, .grid.remove {
@@ -30,15 +43,12 @@ h1 a{
   }
 
   min-height: 120px;
-  box-sizing: border-box;
-  border: 1px solid @accentColor;
-  border-radius: @border-radius;
   margin: 5px;
   padding: 10px;
 
   a {
     color: @accentColor;
-    cursor:pointer;
+    cursor: pointer;
   }
 
   .glyphicon {
@@ -50,14 +60,23 @@ h1 a{
   }
 }
 
-.fa{
-  margin:0 5px;
+.fa {
+  margin: 0 5px;
 }
 
 .layout.invalid {
-  .grid {
-    background-color: red;
+  svg {
+    .surfaces {
+      fill: red;
+    }
+    .bottom {
+      fill: url('#gradient-invalid');
+    }
   }
+}
+
+hr {
+  border-color: @accentColor;
 }
 
 @keyframes popin {
