--- a/web/src/main/resources/templates/module-layout.jade
+++ b/web/src/main/resources/templates/module-layout.jade
@@ -7,6 +7,9 @@
                 .module-settings
                     .module-settings-icon(data-id="#{layout.getModule().getId()}")
                         i.fa.fa-ellipsis-v
+                    .module-resize-icon(data-id="#{layout.getModule().getId()}")
+                        i.fa.fa-chevron-right
+
 
                 .module-icons
                     if layout.getModule().getLocation() == "REMOTE"
