--- a/web/src/main/resources/templates/module-layout.jade
+++ b/web/src/main/resources/templates/module-layout.jade
@@ -8,7 +8,7 @@
                     .module-settings-icon(data-id="#{layout.getModule().getId()}")
                         i.fa.fa-ellipsis-v
                     .module-resize-icon(data-id="#{layout.getModule().getId()}")
-                        i.fa.fa-chevron-right
+                        i.fa.fa-long-arrow-right
 
 
                 .module-icons
