--- a/web/src/main/resources/templates/index.jade
+++ b/web/src/main/resources/templates/index.jade
@@ -5,8 +5,9 @@ block css
     for plugin in filteredPlugins
         link(href="/plugin/#{plugin.getId()}/css/#{plugin.getId()}.css", rel="stylesheet")
 block content
+    #page-select-overlay
     h1#page-title
-        i.fa.fa-bars(aria-hidden="true")
+        i.fa.fa-clone(aria-hidden="true")
         span.name
         span.layout
     div#layout-wrapper
@@ -76,6 +77,7 @@ block content
         .close-editing
 block scripts
     script(src="/js/vendor/gridster/gridster.js")
+    //script(src="/js/vendor/gridster/grid.js")
     script(src="/js/index.js")
     script(src="/js/pages.js")
     for plugin in filteredPlugins
