--- a/web/src/main/java/assets/less/layout-settings.less
+++ b/web/src/main/java/assets/less/layout-settings.less
@@ -15,6 +15,10 @@ h1 a {
     max-height: 120px;
   }
 
+  .layout-display{
+    height:120px;
+  }
+
   .surfaces {
     fill: @accentColor;
     -webkit-transition: all @transition-speed !important;
