--- a/docs/style.css
+++ b/docs/style.css
@@ -1,33 +1,126 @@
-.head{
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+
+.head {
     width: 100%;
     height: 60vh;
     background-color: #333;
     overflow: hidden;
-    padding-top:30px;
+    padding-top: 30px;
     text-align: center;
-    /*background-image: url('logo.svg');*/
-    background-size: contain;
+    background-image: url('images/screen-mobile.png');
+
     background-repeat: no-repeat;
-    background-position: 50px 50px;
+    background-position: center 50px;
     box-shadow: inset 0 -10px 10px -10px #000000;
+
 }
 
-.head img{
+@media (max-width: 450px) {
+    .jumbotron h1 {
+        font-size: 3.5rem;
+    }
+}
+
+@media (min-width: 768px) {
+    .head {
+        background-image: url('images/screen-mobile.png');
+    }
+}
+
+@media (min-width: 992px) {
+    .head {
+        background-image: url('images/screen-tablet.png');
+        max-height: 585px;
+    }
+}
+
+.head img {
     display: block;
-    margin:auto;
-    box-shadow: black 0 0 50px ;
+    margin: auto;
+    box-shadow: black 0 0 50px;
 }
 
-.gif{
+.jumbotron {
+    background-color: white;
+}
+
+.gif {
     height: 200px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
 }
-.responsive-image{
+
+.responsive-image {
     background-image: url("images/responsive.gif");
 }
 
-.layout-image{
+.boards-image {
+    background-image: url("images/boards.gif");
+}
+
+.layout-image {
     background-image: url("images/layout.gif");
+}
+
+.carousel-item img {
+    max-width: 100%;
+}
+
+.carousel-item .col-sm-4 {
+    text-align: right;
+}
+
+.container {
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+}
+
+.row, .jumbotron {
+    max-width: 100%;
+    margin: 0;
+    padding: 15px;
+}
+
+.carousel-inner {
+    /*margin: 0 166px 0 166px;*/
+}
+
+.carousel-indicators li {
+    background-color: #333333;
+    cursor: pointer;
+}
+
+.carousel-indicators li.active {
+    background-color: #999;
+}
+
+.carousel-indicators {
+    position: relative;
+    margin: 10px 0 10px 0;
+    top: 0;
+    bottom: 0;
+}
+
+.carousel-control {
+    color: #333333 !important;
+    font-size: 40px;
+    font-weight: bold;
+    display: block;
+    margin-top: 50px;
+}
+
+.carousel-control:hover {
+    color: black;
+}
+
+.carousel-control-prev {
+    text-align: left;
+}
+
+.carousel-control-next {
+    text-align: right;
 }
