--- a/docs/style.css
+++ b/docs/style.css
@@ -4,35 +4,54 @@ body {
 
 .head {
     width: 100%;
-    height: 60vh;
+    height: 188px;
     background-color: #333;
     overflow: hidden;
-    padding-top: 30px;
-    text-align: center;
-    background-image: url('images/screen-mobile.png');
+    text-align: right;
+    background-image: url('images/screen-tablet.png');
+
+    background-size: 70% auto;
 
     background-repeat: no-repeat;
     background-position: center 50px;
     box-shadow: inset 0 -10px 10px -10px #000000;
 
+    color:white;
+
 }
 
-@media (max-width: 450px) {
+.head a{
+    color: #dddddd;
+}
+
+.head svg{
+    fill: #dddddd;
+}
+
+@media (max-width: 425px) {
     .jumbotron h1 {
         font-size: 3.5rem;
     }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 425px) {
     .head {
-        background-image: url('images/screen-mobile.png');
+        height: 250px;
+        /*background-image: url('images/screen-mobile.png');*/
     }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
     .head {
-        background-image: url('images/screen-tablet.png');
-        max-height: 585px;
+        height: 350px;
+        /*background-image: url('images/screen-mobile.png');*/
+    }
+}
+@media (min-width: 970px) {
+    .head {
+        height: 485px;
+        background-size: auto;
+        /*background-image: url('images/screen-mobile.png');*/
     }
 }
 
@@ -54,15 +73,18 @@ body {
 }
 
 .responsive-image {
-    background-image: url("images/responsive.gif");
+    background-image: url("images/responsive-optimize.gif");
 }
 
 .boards-image {
-    background-image: url("images/boards.gif");
+    background-image: url("images/boards-optimize.gif");
 }
 
+.remote-image {
+    background-image: url("images/remote.png");
+}
 .layout-image {
-    background-image: url("images/layout.gif");
+    background-image: url("images/layout-optimize.gif");
 }
 
 .carousel-item img {
@@ -111,6 +133,10 @@ body {
     font-weight: bold;
     display: block;
     margin-top: 50px;
+}
+
+hr{
+    border-color: white;
 }
 
 .carousel-control:hover {
