--- a/docs/style.css
+++ b/docs/style.css
@@ -103,9 +103,9 @@ body {
 }
 
 .container {
-    margin: 0;
+    margin: auto;
     padding: 0;
-    max-width: 100%;
+    max-width: 900px;
 }
 
 .row, .jumbotron {
