add multi threaded operations for file plugin, so we can browse while copying a file add support for Radarr in the couch potato plugin

--- a/plugins/couchpotato/src/main/java/assets/less/couchpotato.less
+++ b/plugins/couchpotato/src/main/java/assets/less/couchpotato.less
@@ -39,6 +39,10 @@
     }
   }
 
+  .options{
+    text-align: center;
+  }
+
   .couchpotato-movie-list {
     margin-top: 20px;
     text-align: center;
