--- a/plugins/couchpotato/src/main/java/assets/templates/cp-modal.jade
+++ b/plugins/couchpotato/src/main/java/assets/templates/cp-modal.jade
@@ -11,4 +11,9 @@
                     input.search-query(type="text")
                     button.search-submit.btn.btn-primary
                         i.fa.fa-search
+                .options
+                    span Quality:
+                    select.quality
+                    span Folder:
+                    select.folder
                 .couchpotato-movie-list
