--- a/plugins/harddisk/src/main/java/assets/templates/harddisk-full-screen.jade
+++ b/plugins/harddisk/src/main/java/assets/templates/harddisk-full-screen.jade
@@ -14,6 +14,10 @@ p
 p
     | Current path:&nbsp;
     span.current-path
+p
+    label
+        input#hidden(type="checkbox")
+        | Show hidden files
 table.files.table.table-striped.table-hover
     tbody
 
