add icons for iOS webapp

--- a/web/src/main/resources/templates/layout.jade
+++ b/web/src/main/resources/templates/layout.jade
@@ -11,6 +11,9 @@ html(lang="en")
         link(href='/css/main.css', rel='stylesheet')
         //link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", rel="stylesheet")
         //script(type="text/javascript", src="/js/ios-script.js")
+
+        include ./web-app-settings.jade
+
         block css
     body
         #notification
