--- a/web/src/main/resources/templates/layout.jade
+++ b/web/src/main/resources/templates/layout.jade
@@ -8,7 +8,7 @@ html(lang="en")
         meta(name="apple-mobile-web-app-status-bar-style", content="white")
         title HomeDash
         //link(href="http://fonts.googleapis.com/css?family=Roboto:300,300italic", rel="stylesheet", type="text/css")
-        link(href='/css/main.css', rel='stylesheet')
+        link(href='/css/main.css', rel='stylesheet', type="text/css")
         //link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", rel="stylesheet")
         //script(type="text/javascript", src="/js/ios-script.js")
 
