Fix layout of harddisk plugin clipboard layout Modify docker container to run under a specified user id and group id

--- a/plugins/harddisk/src/main/java/assets/less/harddisk.less
+++ b/plugins/harddisk/src/main/java/assets/less/harddisk.less
@@ -201,27 +201,18 @@
       //.table-responsive {
       //  border: none;
 
-      table {
+      .row {
         width: 100%;
-        tr {
-          border: none;
-        }
 
-        td {
-          color: white;
-          border: none;
-        }
-
-        td.text {
+        .text {
           color: white;
           text-align: left;
           font-size: 20px;
-          width: 50%;
+          padding-left:30px;
         }
 
-        td.actions {
+        .actions {
           text-align: right;
-          width: 50%;
 
           .progress {
             width: 100%;
