--- a/plugins/logreader/src/main/java/assets/templates/logreader-full-screen.jade
+++ b/plugins/logreader/src/main/java/assets/templates/logreader-full-screen.jade
@@ -1,6 +1,6 @@
 h3#file
 p
-    button#auto-scroll.btn.btn-primary.active Auto scroll to botton
+    button#auto-scroll.btn.btn-primary.active Auto scroll to bottom
 div
     textarea#logs
 
