Add dialog to get logs of a docker container Add possibility to run the home dash docker container with DEBUG mode to allow the JMX connections

--- a/plugins/docker/src/main/java/assets/less/docker.less
+++ b/plugins/docker/src/main/java/assets/less/docker.less
@@ -24,4 +24,28 @@
   .image-modal, .container-modal {
     cursor: pointer;
   }
+
+  #container-logs-modal {
+    .modal-dialog {
+      height: 100%;
+      width: 100%;
+      margin: 0;
+      padding: 30px;
+      box-sizing: border-box;
+
+      .modal-content {
+        height: 100%;
+
+        .modal-body {
+          padding-bottom: 70px;
+          height: 100%;
+
+          .logs {
+            width: 100%;
+            height: 100%;
+          }
+        }
+      }
+    }
+  }
 }
