--- a/plugins/docker/src/main/java/assets/templates/docker-full-screen.jade
+++ b/plugins/docker/src/main/java/assets/templates/docker-full-screen.jade
@@ -19,9 +19,10 @@ div
                             th Bytes received
                             th Bytes sent
                             th
+                            th
                     tbody
                         tr
-                            td(colspan="7") Loading...
+                            td(colspan="8") Loading...
         #images.tab-pane(role="tabpanel")
             .table-responsive
                 table.table.images.table-striped.table-hover
@@ -39,3 +40,4 @@ div
 
 include ./docker-modal
 include ./docker-image-modal
+include ./docker-logs-modal
