add PiHole plugin full screen with query monitor fix PiHole plugin display issue on size 3x2

--- a/plugins/pihole/src/main/java/assets/less/pihole.less
+++ b/plugins/pihole/src/main/java/assets/less/pihole.less
@@ -23,6 +23,7 @@
     padding-top: 0px;
     margin-bottom: 15px;
   }
+
   p {
     text-align: center;
     font-size: 27px;
@@ -44,17 +45,29 @@
   }
 }
 
-.pihole.size-kiosk{
-  h1{
+.pihole.size-kiosk {
+  h1 {
     font-size: 5vh !important;
     margin-bottom: 25vh !important;
   }
 
-  p{
-    font-size:10vh !important;
+  p {
+    font-size: 10vh !important;
   }
 
-  h3{
+  h3 {
     font-size: 3vh !important;
   }
+}
+
+.pihole.size-3x2 {
+  h3 {
+    font-size: 13px;
+  }
+}
+
+.pihole.size-full-screen {
+  background-color: white;
+  color: black;
+  background-image: none;
 }
