--- a/plugins/dynamicdns/src/main/java/assets/less/dynamicdns.less
+++ b/plugins/dynamicdns/src/main/java/assets/less/dynamicdns.less
@@ -6,7 +6,7 @@
   }
 }
 
-.dynamicdns.size-4x3, .dynamicdns.size-2x1 {
+.dynamicdns.size-2x1 {
   overflow-y: auto !important;
   background-color: #A1887F;
   color: white;
@@ -16,8 +16,19 @@
   background-repeat: no-repeat;
   padding: 20px;
 
-  h3 {
+  h4 {
     color: white;
+    margin-top: 0;
+    margin-bottom: 5px;
+    font-size: 16px;
+
+    &.host {
+      font-weight: bold;
+    }
+
+    &.ip {
+      font-size: 14px;
+    }
   }
 
   .actions .btn {
@@ -31,6 +42,7 @@
 
   .actions {
     margin: 0;
+
     .btn {
       margin: 5px;
     }
